--- a/web/resources/templates/adminTemplate.xhtml
+++ b/web/resources/templates/adminTemplate.xhtml
@@ -40,8 +40,8 @@
             <li><a href="../../pages/Admin/adminHomePage.xhtml"
                    class="active">Home</a></li>
           <li><a href="../../pages/Admin/createNewStaff.xhtml">Register staff</a></li>
-          <li><a href="../../pages/Admin/deleteAccounts.xhtml">ManageAccounts</a></li>
-          <li><a href=""></a></li>
+          <li><a href="../../pages/Admin/deleteAccounts.xhtml">Manage Accounts</a></li>
+          <li><a href="../../pages/general/login.xhtml">Logout</a></li>
         </ul>
       </div>
         <div class="text_header" >
