--- a/web/resources/templates/admissionStaffTemplate.xhtml
+++ b/web/resources/templates/admissionStaffTemplate.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-    
+
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link href="../../resources/css/style.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="../../resources/jss/cufon-yui.js"></script>
@@ -14,74 +14,74 @@
         <script type="text/javascript" src="../../resources/jss/cuf_run.js"></script>
         <script src="../../resources/jss/jquery.js" type="text/javascript"></script>
         <script src="../../resources/jss/custom.js" type="text/javascript"></script>
-            <title>Compro Application Form</title>
+        <title>Compro Application Form</title>
     </h:head>
     <h:body>
- <div class="main">
-   
+        <div class="main">
 
-   <div class="header">
-    <div class="header_resize">
-      <div class="logo">
-          <br/>
-          <table>
-              <tr>
-                  <td>
-                       <img src="../../resources/images/footer_logo.png" width="188" height="78" alt="footer_logo" 
-                            align="left"/>
-                  </td>
-              </tr>
-          </table>
-          <br/>
-        
-      </div>
-      <div class="menu">
-        <ul>
-            <li><a href="../../pages/admissionStaff/admissionStaffHomePage.xhtml"
-                   class="active">Home</a></li>
-          <li><a href="../../pages/admissionStaff/reviewForm.xhtml">Review Form</a></li>
-          <li><a href="../../pages/admissionStaff/searchApplicants.xhtml">Search</a></li>
-          <li><a href=""></a></li>
-        </ul>
-      </div>
-        <div class="text_header" >
-        <p style="font-size: 24px; font-family: monospace;font-style:normal; font-weight: bold ">
-           Online Application System
-        </p>
-      </div>
-      <div class="clr"></div>
-    </div>
- 
-    <div class="clr"></div>
-  </div>
-            
-    <div class="body_bg">
-        <div class="body">
-            <div class="left_resize block">
-        <div class="left ">
-          <ui:insert name="body">
-           hi
-          </ui:insert>
-        </div>
-      </div>
-        </div>
-    </div>
- </div>
-        
- <div class="clr"></div>
-  <div class="footer">
-     <div class="footer_resize">
-      <p class="lf">&copy; Copyright <a href="http://mscs.mum.edu/">
-              2014 Maharishi University of Management</a>.</p>
-      <p class="rf">
-              Designed by Doosti Group/ SFW engineering course</p>
-      <div class="clr"></div>
-    </div>
-  </div>
 
-        </h:body>
-    
-   
-   
+            <div class="header">
+                <div class="header_resize">
+                    <div class="logo">
+                        <br/>
+                        <table>
+                            <tr>
+                                <td>
+                                    <img src="../../resources/images/footer_logo.png" width="188" height="78" alt="footer_logo" 
+                                         align="left"/>
+                                </td>
+                            </tr>
+                        </table>
+                        <br/>
+
+                    </div>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="../../pages/admissionStaff/admissionStaffHomePage.xhtml"
+                                   class="active">Home</a></li>
+                            <li><a href="../../pages/admissionStaff/reviewForm.xhtml">Review Form</a></li>
+                            <li><a href="../../pages/admissionStaff/searchApplicants.xhtml">Search</a></li>
+                            <li><a href="../../pages/general/login.xhtml">Logout</a></li>
+                        </ul>
+                    </div>
+                    <div class="text_header" >
+                        <p style="font-size: 24px; font-family: monospace;font-style:normal; font-weight: bold ">
+                            Online Application System
+                        </p>
+                    </div>
+                    <div class="clr"></div>
+                </div>
+
+                <div class="clr"></div>
+            </div>
+
+            <div class="body_bg">
+                <div class="body">
+                    <div class="left_resize block">
+                        <div class="left ">
+                            <ui:insert name="body">
+                                hi
+                            </ui:insert>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="clr"></div>
+        <div class="footer">
+            <div class="footer_resize">
+                <p class="lf">&copy; Copyright <a href="http://mscs.mum.edu/">
+                        2014 Maharishi University of Management</a>.</p>
+                <p class="rf">
+                    Designed by Doosti Group/ SFW engineering course</p>
+                <div class="clr"></div>
+            </div>
+        </div>
+
+    </h:body>
+
+
+
 </html>
 
