--- a/web/resources/templates/applicantTemplate.xhtml
+++ b/web/resources/templates/applicantTemplate.xhtml
@@ -6,15 +6,11 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link href="../../resources/css/style.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="../../resources/jss/cufon-yui.js"></script>
-        <script type="text/javascript" src="../../resources/jss/arial.js"></script>
-        <script type="text/javascript" src="../../resources/jss/cuf_run.js"></script>
-        <script src="../../resources/jss/jquery.js" type="text/javascript"></script>
-        <script src="../../resources/jss/custom.js" type="text/javascript"></script>
         <title>Compro Application Form</title>
+        <meta content="text/html; charset=UTF-8" http-equiv="Content-type" />
+        <link href="../../resources/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="../../resources/css/custom.css" rel="stylesheet" type="text/css" />
+        
     </h:head>
     <h:body>
         <div class="main">
@@ -39,7 +35,8 @@
                         <ul>
                             <li><a href="../../pages/applicant/applicantHomePage.xhtml"
                                    class="active">Home</a></li>
-                            <li><a href="../../pages/applicant/viewApplicationForm.xhtml">Application form</a></li>
+                            <li onclick="#{personalDataMB.checkApplication()}">
+                                <a href="../../pages/applicant/newApplicationForm.xhtml">Application form</a></li>
                             <li><a href="../../pages/applicant/evaluationStatus.xhtml">My status</a></li>
                             <li><a href="../../pages/general/login.xhtml">Logout</a></li>
                         </ul>
@@ -60,7 +57,7 @@
                     <div class="left_resize block">
                         <div class="left ">
                             <ui:insert name="body">
-                                hi
+                              
                             </ui:insert>
                         </div>
                     </div>
