PersonalData Read/Write, Moved registration page, MenuCountry modified

--- a/web/resources/templates/adminTemplate.xhtml
+++ b/web/resources/templates/adminTemplate.xhtml
@@ -37,7 +37,7 @@
                    class="active">Home</a></li>
           <li><a href="../../pages/Admin/createNewStaff.xhtml">Register staff</a></li>
           <li><a href="../../pages/Admin/deleteAccounts.xhtml">Manage Accounts</a></li>
-          <li><a href="../../pages/general/login.xhtml">Logout</a></li>
+          <li><a href="#{loginMB.logout()}">Logout</a></li>
         </ul>
       </div>
         <div class="text_header" >
