--- a/web/resources/templates/admissionStaffTemplate.xhtml
+++ b/web/resources/templates/admissionStaffTemplate.xhtml
@@ -37,7 +37,7 @@
                                    class="active">Home</a></li>
                             <li><a href="../../pages/admissionStaff/reviewForm.xhtml">Review Form</a></li>
                             <li><a href="../../pages/admissionStaff/searchApplicants.xhtml">Search</a></li>
-                            <li><a href="../../pages/general/login.xhtml">Logout</a></li>
+                            <li><a href="#{loginMB.logout()}">Logout</a></li>
                         </ul>
                     </div>
                     <div class="text_header" >
