--- a/web/resources/templates/applicantTemplate.xhtml
+++ b/web/resources/templates/applicantTemplate.xhtml
@@ -38,7 +38,7 @@
                             <li>
                                 <a href="../../pages/applicant/newApplicationForm.xhtml">Application form</a></li>
                             <li><a href="../../pages/applicant/evaluationStatus.xhtml">My status</a></li>
-                            <li><a href="../../pages/general/login.xhtml">Logout</a></li>
+                            <li><a href="#{loginMB.logout()}">Logout</a></li>
                         </ul>
                     </div>
                     <div class="text_header" >
